# terraform-poc

./: .env.example  .env.local.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
deployment/: .gitignore  ansible.cfg  deploy.sh
deployment/ami-builder/: ami.json  sys_cfg.sh
deployment/playbooks/: deploy.yml
deployment/roles/terraform-poc/tasks/: main.yml
deployment/terraform/: .terraform.lock.hcl  dlb.tf  main.tf  variables.tf
deployment/terraform/environments/: local.tfvars
dockerfiles/: app.Dockerfile  infra.Dockerfile
src/terraform_poc/: app.py
tests/: test_app.py
