[tool.poetry]
name = "terraform-poc"
version = "0.1.0"
description = "Terraform Proof of Concept"
authors = ["Gabriel Mangiro <gabrielmangi01@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mangiro/terraform-poc.git"

[tool.poetry.dependencies]
python = "^3.9"
falcon = "^3.1.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
